examples/test/testpolicy10156.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10156
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key10: value19
      key30: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value35
      podSelector:
        matchLabels:
          key34: value13
          key4: value26
